feat: basic footer - nav and social-media

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <div id="dev"></div>
-  <header id="#top">
+  <header id="top">
     <div class="content header">
       <a href="/">
         <img src="assets/logo.svg" alt="Louvre logo">
@@ -85,7 +85,7 @@
           </div>
 
           <div class="thumbs">
-            <span data-index="0" class="active"></span>
+            <i data-index="0" class="active"></i>
             <span data-index="1"></span>
             <span data-index="2"></span>
             <span data-index="3"></span>
@@ -109,27 +109,27 @@
     </section>
     <section id="visiting">
       <div class="content">
-        <h2>Visiting</h2>
+        <h2>Virtual tour</h2>
       </div>
     </section>
     <section id="explore">
       <div class="content">
-        <h2>Explore</h2>
+        <h2>Picture explore</h2>
       </div>
     </section>
     <section id="video">
       <div class="content">
-        <h2>Video</h2>
+        <h2>Video journey</h2>
       </div>
     </section>
     <section id="gallery">
       <div class="content">
-        <h2>Gallery</h2>
+        <h2>Art Gallery</h2>
       </div>
     </section>
     <section id="tickets">
       <div class="content">
-        <h2>Tickets</h2>
+        <h2>BUY TICKETS</h2>
       </div>
     </section>
     <section id="contacts">
@@ -141,11 +141,138 @@
 
   <footer>
     <div class="content">
-      <a href="#top">
-        <img src="assets/logo.svg" alt="Louvre logo">
-        <span class="sr-only">Go to top of page</span>
-      </a>
-      <p>&copy; 2025 Museum</p>
+      <div class="top">
+        <a href="#top">
+          <img src="assets/logo.svg" alt="Louvre logo">
+          <span class="sr-only">Go to top of page</span>
+        </a>
+
+        <div class="links">
+          <nav class="nav">
+            <ul class="nav-list">
+              <li>
+                <ul class="sub-list">
+                  <li><a class="nav-list-link" href="#visiting">Visiting</a></li>
+                  <li><a class="nav-list-link" href="#explore">Explore</a></li>
+                  <li><a class="nav-list-link" href="#video">Video</a></li>
+                </ul>
+              </li>
+              <li>
+                <ul class="sub-list">
+                  <li><a class="nav-list-link" href="#gallery">Gallery</a></li>
+                  <li><a class="nav-list-link" href="#tickets">Tickets</a></li>
+                  <li><a class="nav-list-link" href="#contacts">Contacts</a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="social-media">
+            <a href="https://www.youtube.com/user/louvre" target="_blank" rel="noopener noreferrer">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g filter="url(#filter0_d_1_1743)">
+                <rect x="0.5" y="0.5" width="47" height="47" rx="23.5" stroke="#666666"/>
+                </g>
+                <path d="M22.03 27.38V20.62L27.97 24L22.03 27.38ZM35.23 18.5C35.1026 18.0177 34.8508 17.5773 34.4998 17.2229C34.1488 16.8684 33.711 16.6122 33.23 16.48C31.46 16 24.35 16 24.35 16C24.35 16 17.25 16 15.48 16.48C14.999 16.6122 14.5612 16.8684 14.2102 17.2229C13.8592 17.5773 13.6074 18.0177 13.48 18.5C13 20.28 13 24 13 24C13 24 13 27.72 13.47 29.5C13.5983 29.9835 13.8516 30.4247 14.2044 30.7793C14.5572 31.1338 14.9972 31.3893 15.48 31.52C17.25 32 24.36 32 24.36 32C24.36 32 31.46 32 33.23 31.52C33.711 31.3878 34.1488 31.1316 34.4998 30.7771C34.8508 30.4227 35.1026 29.9823 35.23 29.5C35.71 27.72 35.71 24 35.71 24C35.71 24 35.71 20.28 35.24 18.5H35.23Z" fill="white"/>
+                <defs>
+                <filter id="filter0_d_1_1743" x="0" y="0" width="48" height="48" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                <feOffset/>
+                <feColorMatrix type="matrix" values="0 0 0 0 0.4 0 0 0 0 0.4 0 0 0 0 0.4 0 0 0 1 0"/>
+                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_1743"/>
+                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_1743" result="shape"/>
+                </filter>
+                </defs>
+                </svg>
+                <span class="sr-only">Louvre at Youtube</span>
+            </a>
+            <a href="https://www.instagram.com/museelouvre/" target="_blank" rel="noopener noreferrer">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g filter="url(#filter0_d_1_1739)">
+                <rect x="0.5" y="0.5" width="47" height="47" rx="23.5" stroke="#666666"/>
+                </g>
+                <path d="M25.0202 14C26.8202 14 27.2002 14.02 28.1202 14.06C29.1802 14.11 29.9102 14.28 30.5402 14.53C31.2002 14.78 31.7602 15.13 32.3102 15.68C32.8702 16.23 33.2102 16.79 33.4702 17.45C33.7202 18.08 33.8802 18.81 33.9302 19.88C33.9802 20.83 33.9902 21.2 33.9902 23.2V24.8C33.9902 26.8 33.9802 27.17 33.9302 28.12C33.9144 28.9468 33.7589 29.7651 33.4702 30.54C33.2102 31.2 32.8702 31.76 32.3202 32.31C31.7602 32.87 31.2002 33.21 30.5402 33.47C29.9102 33.72 29.1802 33.88 28.1202 33.93C27.1702 33.98 26.7902 33.99 24.7902 33.99H23.2002C21.2002 33.99 20.8302 33.98 19.8702 33.93C19.0433 33.9141 18.2251 33.7586 17.4502 33.47C16.7838 33.2195 16.1798 32.8271 15.6802 32.32C15.168 31.8186 14.772 31.211 14.5202 30.54C14.2318 29.765 14.0763 28.9468 14.0602 28.12C14.0111 27.0874 13.9911 26.0537 14.0002 25.02V22.97C14.0002 21.17 14.0202 20.79 14.0602 19.87C14.1102 18.81 14.2802 18.08 14.5202 17.45C14.7802 16.79 15.1202 16.23 15.6802 15.68C16.1753 15.1674 16.7806 14.7742 17.4502 14.53C18.2246 14.2382 19.0428 14.0793 19.8702 14.06C20.7902 14.02 21.1702 14 22.9702 14H25.0202ZM25.0402 15.8H22.9502C21.2202 15.8 20.8502 15.82 19.9502 15.86C18.9802 15.9 18.4502 16.06 18.1002 16.2C17.6302 16.38 17.3002 16.6 16.9502 16.95C16.6002 17.3 16.3802 17.63 16.2002 18.1C16.0702 18.45 15.9002 18.98 15.8602 19.96C15.8202 20.86 15.8002 21.22 15.8002 22.96V25.04C15.8002 26.78 15.8202 27.14 15.8602 28.04C15.9002 29.01 16.0602 29.54 16.2002 29.89C16.3802 30.36 16.6002 30.69 16.9502 31.04C17.3002 31.39 17.6302 31.61 18.1002 31.79C18.4502 31.93 18.9802 32.09 19.9602 32.13C20.9302 32.18 21.2802 32.19 23.4402 32.19H24.5502C26.7202 32.19 27.0602 32.18 28.0402 32.13C29.0102 32.09 29.5402 31.93 29.8902 31.79C30.3602 31.61 30.6902 31.39 31.0402 31.04C31.3902 30.69 31.6102 30.36 31.7902 29.89C31.9302 29.54 32.0902 29.01 32.1302 28.04C32.1802 27.06 32.1902 26.72 32.1902 24.55V23.45C32.1902 21.28 32.1802 20.93 32.1302 19.95C32.0902 18.98 31.9302 18.45 31.7902 18.1C31.6292 17.6654 31.373 17.2725 31.0402 16.95C30.7179 16.6169 30.3249 16.3606 29.8902 16.2C29.2971 15.9832 28.6716 15.8682 28.0402 15.86C27.0409 15.8123 26.0405 15.7923 25.0402 15.8ZM24.0002 18.86C25.362 18.86 26.6681 19.401 27.6311 20.364C28.5941 21.327 29.1352 22.6331 29.1352 23.995C29.1352 25.3569 28.5941 26.663 27.6311 27.626C26.6681 28.589 25.362 29.13 24.0002 29.13C22.6383 29.13 21.3322 28.589 20.3692 27.626C19.4062 26.663 18.8652 25.3569 18.8652 23.995C18.8652 22.6331 19.4062 21.327 20.3692 20.364C21.3322 19.401 22.6383 18.86 24.0002 18.86ZM24.0002 20.66C23.1157 20.66 22.2674 21.0114 21.642 21.6368C21.0165 22.2622 20.6652 23.1105 20.6652 23.995C20.6652 24.8795 21.0165 25.7278 21.642 26.3532C22.2674 26.9786 23.1157 27.33 24.0002 27.33C24.8847 27.33 25.7329 26.9786 26.3584 26.3532C26.9838 25.7278 27.3352 24.8795 27.3352 23.995C27.3352 23.1105 26.9838 22.2622 26.3584 21.6368C25.7329 21.0114 24.8847 20.66 24.0002 20.66ZM29.3302 17.46C29.6484 17.46 29.9536 17.5864 30.1787 17.8115C30.4037 18.0365 30.5302 18.3417 30.5302 18.66C30.5302 18.9783 30.4037 19.2835 30.1787 19.5085C29.9536 19.7336 29.6484 19.86 29.3302 19.86C29.0119 19.86 28.7067 19.7336 28.4816 19.5085C28.2566 19.2835 28.1302 18.9783 28.1302 18.66C28.1302 18.3417 28.2566 18.0365 28.4816 17.8115C28.7067 17.5864 29.0119 17.46 29.3302 17.46Z" fill="white"/>
+                <defs>
+                <filter id="filter0_d_1_1739" x="0" y="0" width="48" height="48" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                <feOffset/>
+                <feColorMatrix type="matrix" values="0 0 0 0 0.4 0 0 0 0 0.4 0 0 0 0 0.4 0 0 0 1 0"/>
+                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_1739"/>
+                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_1739" result="shape"/>
+                </filter>
+                </defs>
+                </svg>
+                <span class="sr-only">Louvre at Instagram</span>
+            </a>
+            <a href="https://www.facebook.com/museedulouvre" target="_blank" rel="noopener noreferrer">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g filter="url(#filter0_d_1_1735)">
+                <rect x="0.5" y="0.5" width="47" height="47" rx="23.5" stroke="#666666"/>
+                </g>
+                <path d="M21.78 34L21.75 25.25H18V21.5H21.75V19C21.75 15.63 23.84 14 26.85 14C28.29 14 29.53 14.1 29.89 14.15V17.68H27.8C26.17 17.68 25.85 18.46 25.85 19.6V21.5H30.5L29.25 25.25H25.85V34H21.78Z" fill="white"/>
+                <defs>
+                <filter id="filter0_d_1_1735" x="0" y="0" width="48" height="48" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                <feOffset/>
+                <feColorMatrix type="matrix" values="0 0 0 0 0.4 0 0 0 0 0.4 0 0 0 0 0.4 0 0 0 1 0"/>
+                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_1735"/>
+                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_1735" result="shape"/>
+                </filter>
+                </defs>
+                </svg>
+                <span class="sr-only">Louvre at Facebook</span>
+            </a>
+            <a href="http://twitter.com/museelouvre" target="_blank" rel="noopener noreferrer">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g filter="url(#filter0_d_1_1731)">
+                <rect x="0.5" y="0.5" width="47" height="47" rx="23.5" stroke="#666666"/>
+                </g>
+                <path d="M34 17.88C33.25 18.25 32.5 18.38 31.62 18.5C32.5 18 33.12 17.25 33.37 16.25C32.5606 16.7313 31.6743 17.0696 30.75 17.25C29.9485 16.4623 28.8737 16.0145 27.75 16C25.62 16 23.75 17.88 23.75 20.13C23.75 20.5 23.75 20.75 23.88 21C22.2422 20.9382 20.6364 20.5271 19.1705 19.7941C17.7045 19.0611 16.4121 18.0232 15.38 16.75C15.0081 17.3956 14.8342 18.1363 14.88 18.88C14.8916 19.552 15.0683 20.2108 15.3943 20.7984C15.7204 21.3861 16.186 21.8846 16.75 22.25C16.12 22.25 15.5 22 14.87 21.75C14.87 23.75 16.25 25.38 18.12 25.75C17.75 25.88 17.37 25.88 17 25.88C16.75 25.88 16.5 25.88 16.25 25.75C16.75 27.38 18.25 28.63 20.13 28.63C18.6778 29.7963 16.8622 30.4156 15 30.38H14C15.875 31.5591 18.0355 32.2056 20.25 32.25C27.75 32.25 31.88 26 31.88 20.62V20.12C32.7387 19.5335 33.4617 18.7697 34 17.88Z" fill="white"/>
+                <defs>
+                <filter id="filter0_d_1_1731" x="0" y="0" width="48" height="48" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                <feOffset/>
+                <feColorMatrix type="matrix" values="0 0 0 0 0.4 0 0 0 0 0.4 0 0 0 0 0.4 0 0 0 1 0"/>
+                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_1731"/>
+                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_1731" result="shape"/>
+                </filter>
+                </defs>
+                </svg>
+                <span class="sr-only">Louvre at twitter</span>
+            </a>
+            <a href="https://www.pinterest.fr/museedulouvre/" target="_blank" rel="noopener noreferrer">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g filter="url(#filter0_d_1_1727)">
+                <rect x="0.5" y="0.5" width="47" height="47" rx="23.5" stroke="#666666"/>
+                </g>
+                <path d="M24.0002 14C21.6757 14.0082 19.4267 14.826 17.6398 16.3128C15.8529 17.7995 14.6397 19.8623 14.2089 22.1466C13.7781 24.4309 14.1565 26.7939 15.2791 28.8293C16.4017 30.8648 18.1984 32.4456 20.3602 33.3C20.2602 32.51 20.1902 31.3 20.3902 30.43L21.5602 25.46C21.5602 25.46 21.2602 24.86 21.2602 23.98C21.2602 22.59 22.0702 21.56 23.0802 21.56C23.9302 21.56 24.3502 22.2 24.3502 22.96C24.3502 23.82 23.8002 25.1 23.5102 26.29C23.2702 27.29 24.0102 28.1 25.0002 28.1C26.7802 28.1 28.1402 26.23 28.1402 23.53C28.1402 21.13 26.4202 19.47 23.9602 19.47C23.3758 19.4443 22.7923 19.5373 22.2448 19.7434C21.6973 19.9495 21.1973 20.2644 20.7749 20.669C20.3525 21.0737 20.0164 21.5598 19.787 22.0979C19.5576 22.636 19.4397 23.215 19.4402 23.8C19.4402 24.66 19.7702 25.58 20.1802 26.08C20.2602 26.18 20.2702 26.27 20.2402 26.37L19.9602 27.5C19.9202 27.68 19.8102 27.73 19.6302 27.64C18.3702 27.05 17.5902 25.24 17.5902 23.76C17.5902 20.61 19.8902 17.72 24.2102 17.72C27.6702 17.72 30.3802 20.18 30.3802 23.49C30.3802 26.94 28.2002 29.71 25.1802 29.71C24.1802 29.71 23.2202 29.18 22.9002 28.56L22.2702 30.93C21.9751 31.8577 21.5581 32.7421 21.0302 33.56C22.4041 33.9816 23.8526 34.1021 25.2772 33.9133C26.7018 33.7245 28.069 33.2309 29.2856 32.4661C30.5023 31.7014 31.5398 30.6833 32.3275 29.4814C33.1152 28.2795 33.6346 26.9219 33.8504 25.5011C34.0661 24.0804 33.9731 22.6298 33.5776 21.2482C33.1822 19.8666 32.4936 18.5865 31.5588 17.4951C30.6241 16.4036 29.465 15.5264 28.1607 14.9233C26.8563 14.3202 25.4373 14.0053 24.0002 14Z" fill="white"/>
+                <defs>
+                <filter id="filter0_d_1_1727" x="0" y="0" width="48" height="48" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                <feOffset/>
+                <feColorMatrix type="matrix" values="0 0 0 0 0.4 0 0 0 0 0.4 0 0 0 0 0.4 0 0 0 1 0"/>
+                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_1727"/>
+                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_1727" result="shape"/>
+                </filter>
+                </defs>
+                </svg>
+                <span class="sr-only">Louvre at pinterest</span>
+            </a>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="bottom">
+        <span>&copy; 2025</span>
+        <span>The Rolling Scopes School</span>
+        <span>Vadim4Web</span>
+      </div>
     </div>
   </footer>
 
