feat: visiting with animated underlining 1920 solution

--- a/index.html
+++ b/index.html
@@ -110,6 +110,45 @@
     <section id="visiting">
       <div class="content">
         <h2>Virtual tour</h2>
+
+        <div class="visiting-grid">
+          <a target="_blank" rel="noopener noreferrer" href="https://www.google.com/maps/@48.8606882,2.3356791,3a,90y,328.36h,87.55t/data=!3m7!1e1!3m5!1sAF1QipMZ9YgnArbwEIbTDANeSQYFu9gNqpW_2Sv8FBvY!2e10!3e12!7i4352!8i1815" class="visual-item">
+            <img src="assets/images/visiting/preview1.jpg" alt="360 degrees virtual tour preview image">
+            <h3 class="title">Royal Palace</h3>
+            <p>360° Virtual Tour</p>
+            <p>Google Street Panorama View</p>
+          </a>
+          <a target="_blank" rel="noopener noreferrer" href="https://www.google.com/maps/@48.8563254,2.3352706,3a,75y,90t/data=!3m7!1e1!3m5!1sAF1QipNRj_CwP4coDMYdCHj6qHeBeJpI2VxU5BUsOX4F!2e10!3e12!7i11000!8i5500" class="visual-item">
+            <img src="assets/images/visiting/preview2.jpg" alt="360 degrees virtual tour preview image">
+            <h3 class="title">Denon Wing</h3>
+            <p>360° Virtual Tour</p>
+            <p>Google Street Panorama View</p>
+          </a>
+          <a target="_blank" rel="noopener noreferrer" href="https://www.google.com/maps/@48.8601723,2.3395439,3a,88.4y,322.04h,84.25t/data=!3m7!1e1!3m5!1sAF1QipNMZGQuEA-pAUvIG_eP_2f3gWTKZEJ6XLVJ-Pgb!2e10!3e12!7i10240!8i5120" class="visual-item">
+            <img src="assets/images/visiting/preview3.jpg" alt="360 degrees virtual tour preview image">
+            <h3 class="title">Colonnade Perrault</h3>
+            <p>360° Virtual Tour</p>
+            <p>Google Street Panorama View</p>
+          </a>
+          <a target="_blank" rel="noopener noreferrer" href="https://www.google.com/maps/@48.860183,2.3356156,3a,90y,177.69h,95.61t/data=!3m7!1e1!3m5!1sAF1QipP7uFZnTITRe-7AEVAgHAfqiCL-03gvBHcYWgF3!2e10!3e12!7i5472!8i2736" class="visual-item">
+            <img src="assets/images/visiting/preview4.jpg" alt="360 degrees virtual tour preview image">
+            <h3 class="title">Greek hall</h3>
+            <p>360° Virtual Tour</p>
+            <p>Google Street Panorama View</p>
+          </a>
+          <a target="_blank" rel="noopener noreferrer" href="https://www.google.com/maps/@48.8598788,2.3355157,3a,82.2y,7.53h,94t/data=!3m7!1e1!3m5!1sAF1QipO1wkUUbyzpPjj-OR0mR5etZJT-xl-40XK8rDQ3!2e10!3e12!7i10240!8i5120" class="visual-item">
+            <img src="assets/images/visiting/preview5.jpg" alt="360 degrees virtual tour preview image">
+            <h3 class="title">Mona Lisa</h3>
+            <p>360° Virtual Tour</p>
+            <p>Google Street Panorama View</p>
+          </a>
+          <a target="_blank" rel="noopener noreferrer" href="https://www.google.com/maps/@48.8563254,2.3352706,3a,90y,21.26h,79.91t/data=!3m7!1e1!3m5!1sAF1QipPpGAowYatVyk3MMGnZAaQkYm2EUk-Dlca06SS5!2e10!3e12!7i11304!8i5652" class="visual-item">
+            <img src="assets/images/visiting/preview6.jpg" alt="360 degrees virtual tour preview image">
+            <h3 class="title">Night Palace</h3>
+            <p>360° Virtual Tour</p>
+            <p>Google Street Panorama View</p>
+          </a>
+        </div>
       </div>
     </section>
     <section id="explore">
@@ -278,6 +317,7 @@
 
   <script type="module">
     import { initSlider } from './scripts/slider.js';
+    import { initUnderlineAnimation } from './scripts/underline-animation.js';
 
     function setSize() {
       document.getElementById('dev').innerText = window.innerWidth + 'x' + window.innerHeight;
@@ -286,12 +326,15 @@
     window.onload = () => {
       setSize();
 
-      // Initialize slider with autoplay
+      // Initialize slider
       initSlider('welcome-slider', 'welcome-slider-container', {
         slideWidth: 1000,
         autoplay: true,
-        interval: 5000 // optional: change interval time here
+        interval: 5000
       });
+
+      // Initialize underline animation
+      initUnderlineAnimation();
     };
 
     window.addEventListener('resize', setSize);
